--- a/DidacticalEnigma/MainWindow.xaml
+++ b/DidacticalEnigma/MainWindow.xaml
@@ -17,73 +17,42 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="4*" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="5*" />
         </Grid.RowDefinitions>
-        <enigma:JapaneseTextPreview Grid.Row="0" SelectionInfo="{Binding DataContext.SelectionInfo, RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Mode=OneWayToSource}" />
-        <TabControl Grid.Row="2">
-            <TabItem Header="Main">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="3*" />
-                        <RowDefinition Height="2*" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
-                    <TextBox
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        AcceptsReturn="True"
-                        FontSize="18"
-                        IsReadOnly="True"
-                        Text="{Binding SelectionInfo.Character.Description, Mode=OneWay}"
-                        TextWrapping="Wrap" />
-                    <TextBox
-                        Grid.Row="0"
-                        Grid.Column="1"
-                        Grid.ColumnSpan="2"
-                        AcceptsReturn="True"
-                        FontSize="18"
-                        IsReadOnly="True"
-                        Text="{Binding SelectionInfo.Word.DictionaryStringBlurb, Mode=OneWay}"
-                        TextWrapping="Wrap" />
-                    <TextBox
-                        Grid.Row="1"
-                        Grid.Column="0"
-                        AcceptsReturn="True"
-                        FontSize="18"
-                        Text="{Binding Input}"
-                        TextWrapping="Wrap"
-                        VerticalScrollBarVisibility="Auto" />
-                    <TextBox
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        AcceptsReturn="True"
-                        FontSize="18"
-                        Text="{Binding RawOutput, UpdateSourceTrigger=PropertyChanged}"
-                        TextWrapping="Wrap"
-                        VerticalScrollBarVisibility="Auto" />
-                    <Grid Grid.Row="1" Grid.Column="2">
-                        <Grid.RowDefinitions>
-                            <RowDefinition />
-                            <RowDefinition />
-                        </Grid.RowDefinitions>
-                        <Button
-                            Grid.Row="0"
-                            Command="{Binding Update}"
-                            Content="Update" />
-                        <Button
-                            Grid.Row="1"
-                            Command="{Binding Reset}"
-                            Content="Reset" />
-
+        <TabControl ItemsSource="{Binding TextBuffers}" SelectedItem="{Binding CurrentTextBuffer}">
+            <TabControl.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}" />
+                </DataTemplate>
+            </TabControl.ItemTemplate>
+            <TabControl.ContentTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="10" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <enigma:JapaneseTextPreview Grid.Column="0" SelectionInfo="{Binding SelectionInfo, Mode=OneWayToSource}" />
+                        <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" />
+                        <TextBox
+                            Grid.Column="2"
+                            AcceptsReturn="True"
+                            FontSize="18"
+                            Text="{Binding RawOutput, UpdateSourceTrigger=PropertyChanged}"
+                            TextWrapping="Wrap"
+                            VerticalScrollBarVisibility="Auto" />
                     </Grid>
-                </Grid>
+                </DataTemplate>
+            </TabControl.ContentTemplate>
+        </TabControl>
+        <TabControl Grid.Row="2" SelectedIndex="1">
+            <TabItem Header="Project">
+                <TextBlock Text="To be implemented" />
             </TabItem>
             <TabItem Header="Usage">
-                <enigma:UsageDataSourcePreview DataContext="{Binding UsageDataSourceVM}" SearchQuery="{Binding DataContext.SelectionInfo, RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Converter={x:Static vms:SelectionInfoToRequestConverter.Default}, Mode=OneWay}" />
+                <enigma:UsageDataSourcePreview DataContext="{Binding UsageDataSourceVM}" SearchQuery="{Binding DataContext.CurrentTextBuffer.SelectionInfo, RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Converter={x:Static vms:SelectionInfoToRequestConverter.Default}, Mode=OneWay}" />
             </TabItem>
             <TabItem Header="Hiragana">
                 <enigma:KanaBoard DataContext="{Binding HiraganaBoard}" />
@@ -93,6 +62,34 @@
             </TabItem>
             <TabItem Header="Katakana">
                 <enigma:KanaBoard DataContext="{Binding KatakanaBoard}" />
+            </TabItem>
+            <TabItem Header="Clipboard">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="10" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <enigma:JapaneseTextPreview Grid.Column="0" SelectionInfo="{Binding ClipboardTextBuffer.SelectionInfo, Mode=OneWayToSource}" />
+                        <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" />
+                        <TextBox
+                            Grid.Column="2"
+                            AcceptsReturn="True"
+                            FontSize="18"
+                            Text="{Binding ClipboardTextBuffer.RawOutput, UpdateSourceTrigger=PropertyChanged}"
+                            TextWrapping="Wrap"
+                            VerticalScrollBarVisibility="Auto" />
+                    </Grid>
+                    <UniformGrid Grid.Row="1" Columns="2">
+                        <Button Command="{Binding SendToScratchpad}" Content="Send to scratchpad" />
+                        <Button Command="{Binding SendToCurrent}" Content="Send to current" />
+                    </UniformGrid>
+                </Grid>
             </TabItem>
             <TabItem Header="About">
                 <TextBox IsReadOnly="True" Text="{Binding AboutText, Mode=OneWay}" />
