--- a/DidacticalEnigma/Views/KanjiRadicalLookupControl.xaml
+++ b/DidacticalEnigma/Views/KanjiRadicalLookupControl.xaml
@@ -47,10 +47,7 @@
                 SelectionMode="Multiple">
                 <ListView.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <WrapPanel
-                            ItemHeight="{Binding Height}"
-                            ItemWidth="{Binding Width}"
-                            Orientation="Horizontal" />
+                        <WrapPanel Orientation="Horizontal" />
                     </ItemsPanelTemplate>
                 </ListView.ItemsPanel>
                 <ListView.ItemContainerStyle>
@@ -62,13 +59,26 @@
                 </ListView.ItemContainerStyle>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock
-                            HorizontalAlignment="Stretch"
-                            VerticalAlignment="Stretch"
-                            Background="{Binding Highlighted, Converter={x:Static local:BooleanToBrushConverter.Default}}"
-                            Focusable="{Binding Enabled}"
-                            FontSize="24"
-                            Text="{Binding Name}" />
+                        <Grid Width="{Binding DataContext.Width, RelativeSource={RelativeSource AncestorType=ListView, Mode=FindAncestor}}" Height="{Binding DataContext.Height, RelativeSource={RelativeSource AncestorType=ListView, Mode=FindAncestor}}">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock
+                                Grid.Column="0"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Background="{Binding Highlighted, Converter={x:Static local:BooleanToBrushConverter.Default}}"
+                                Focusable="{Binding Enabled}"
+                                FontSize="24"
+                                Text="{Binding Name}" />
+                            <TextBlock
+                                Grid.Column="1"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Bottom"
+                                FontSize="9"
+                                Text="{Binding StrokeCount}" />
+                        </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
